--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1986,13 +1986,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of word models returned = 112\n"
+     ]
+    }
+   ],
    "source": [
     "from my_model_selectors import SelectorConstant\n",
     "\n",
@@ -2027,13 +2035,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of test set items: 178\n",
+      "Number of test set sentences: 40\n"
+     ]
+    }
+   ],
    "source": [
     "test_set = asl.build_test(features_ground)\n",
     "print(\"Number of test set items: {}\".format(test_set.num_items))\n",
@@ -2056,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2071,17 +2088,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.5674157303370787\n",
+      "Total correct: 77 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN WRITE HOMEWORK                                           JOHN WRITE HOMEWORK\n",
+      "    7: *SOMETHING-ONE *CAR *ARRIVE *WHAT                             JOHN CAN GO CAN\n",
+      "   12: *IX *WHAT *WHAT *CAR                                          JOHN CAN GO CAN\n",
+      "   21: JOHN *HOMEWORK *JOHN *FUTURE *CAR *CAR *FUTURE *MARY          JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *IX IX *WHO IX                                           JOHN LIKE IX IX IX\n",
+      "   28: JOHN *WHO IX *FUTURE *LOVE                                    JOHN LIKE IX IX IX\n",
+      "   30: JOHN *MARY *MARY *MARY *MARY                                  JOHN LIKE IX IX IX\n",
+      "   36: *VISIT *VISIT *IX *GO *MARY *IX                               MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: *MARY *GO *GIVE MARY *MARY                                    JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *IX BUY HOUSE                                            JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *FRANK *GIVE1 CAR *JOHN                                 FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN SHOULD NOT BUY HOUSE                                     JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *VISIT VISIT MARY                                       JOHN DECIDE VISIT MARY\n",
+      "   67: JOHN *JOHN *MARY BUY HOUSE                                    JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FUTURE VISIT MARY                                       JOHN WILL VISIT MARY\n",
+      "   74: *IX *GO *MARY MARY                                            JOHN NOT VISIT MARY\n",
+      "   77: *JOHN BLAME MARY                                              ANN BLAME MARY\n",
+      "   84: *JOHN *GIVE1 *HOMEWORK *COAT                                  IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *MARY IX *IX *IX IX *ARRIVE COAT                              JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN *ALL IX *IX *VISIT *COAT                                 JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX IX *IX *IX *COAT                                     JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: *IX NEW CAR *COAT                                             POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *FRANK                                                   JOHN LEG\n",
+      "  107: JOHN *IX FRIEND *ARRIVE *JANA                                 JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *IX ARRIVE                                                    WOMAN ARRIVE\n",
+      "  113: IX CAR *IX *MARY *BOX                                         IX CAR BLUE SUE BUY\n",
+      "  119: *VISIT *BUY1 IX *BOX *IX                                      SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *BUY BOOK                                                JOHN READ BOOK\n",
+      "  139: JOHN *BUY1 WHAT *MARY BOOK                                    JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY YESTERDAY WHAT *COAT                                 JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE JOHN WHO                                                 LOVE JOHN WHO\n",
+      "  167: JOHN *MARY *GO LOVE MARY                                      JOHN IX SAY LOVE MARY\n",
+      "  171: JOHN MARY BLAME                                               JOHN MARY BLAME\n",
+      "  174: *CAR *GIVE3 GIVE1 *YESTERDAY *WHAT                            PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: JOHN ARRIVE                                                   JOHN ARRIVE\n",
+      "  184: ALL BOY *GIVE1 TEACHER *YESTERDAY                             ALL BOY GIVE TEACHER APPLE\n",
+      "  189: JOHN *SOMETHING-ONE *VISIT BOX                                JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *SOMETHING-ONE *VISIT BOX                                JOHN GIVE GIRL BOX\n",
+      "  199: *JOHN *ARRIVE *GO                                             LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *MARY *LOVE *LOVE *GIVE1 HOUSE                           JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Choose a feature set and model selector\n",
     "features = features_ground # change as needed\n",
-    "model_selector = SelectorConstant # change as needed\n",
+    "model_selector = SelectorCV # change as needed\n",
     "\n",
     "# TODO Recognize the test set and display the result with the show_errors method\n",
     "models = train_all_words(features, model_selector)\n",
@@ -2092,30 +2161,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.5280898876404494\n",
+      "Total correct: 84 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN WRITE HOMEWORK                                           JOHN WRITE HOMEWORK\n",
+      "    7: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
+      "   12: JOHN *WHAT *JOHN CAN                                          JOHN CAN GO CAN\n",
+      "   21: JOHN *HOMEWORK *JOHN *PREFER BUT *WHAT *FUTURE *WHO           JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *IX IX *WHO IX                                           JOHN LIKE IX IX IX\n",
+      "   28: JOHN *FUTURE IX *FUTURE *LOVE                                 JOHN LIKE IX IX IX\n",
+      "   30: JOHN LIKE *MARY *MARY *MARY                                   JOHN LIKE IX IX IX\n",
+      "   36: *IX *VISIT *GIVE *GIVE *MARY *MARY                            MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: JOHN *GO *DECIDE *JOHN *MARY                                  JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *IX BUY HOUSE                                            JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *SEE BUY CAR *JOHN                                      FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN SHOULD NOT BUY HOUSE                                     JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *GO *GO MARY                                            JOHN DECIDE VISIT MARY\n",
+      "   67: *SHOULD FUTURE *MARY BUY HOUSE                                JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FUTURE *GIVE1 MARY                                      JOHN WILL VISIT MARY\n",
+      "   74: *IX *GO *GO *VISIT                                            JOHN NOT VISIT MARY\n",
+      "   77: *JOHN *GIVE1 MARY                                             ANN BLAME MARY\n",
+      "   84: *HOMEWORK *GIVE1 *HOMEWORK *COAT                              IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *MAN *GIVE *IX *IX IX *ARRIVE *BOOK                           JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN GIVE IX SOMETHING-ONE WOMAN *ARRIVE                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX IX *IX *IX BOOK                                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: POSS NEW CAR BREAK-DOWN                                       POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *SEE                                                     JOHN LEG\n",
+      "  107: JOHN POSS *HAVE HAVE *MARY                                    JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *LOVE *HOMEWORK                                               WOMAN ARRIVE\n",
+      "  113: IX CAR *IX *MARY *JOHN                                        IX CAR BLUE SUE BUY\n",
+      "  119: *MARY *BUY1 IX *BLAME *IX                                     SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *GIVE1 BOOK                                              JOHN READ BOOK\n",
+      "  139: JOHN *ARRIVE WHAT *MARY *ARRIVE                               JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY YESTERDAY WHAT BOOK                                  JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE JOHN WHO                                                 LOVE JOHN WHO\n",
+      "  167: JOHN *MARY *VISIT LOVE MARY                                   JOHN IX SAY LOVE MARY\n",
+      "  171: *IX MARY BLAME                                                JOHN MARY BLAME\n",
+      "  174: *JOHN *GIVE3 GIVE1 *YESTERDAY *JOHN                           PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: *EAT ARRIVE                                                   JOHN ARRIVE\n",
+      "  184: ALL BOY *GIVE1 TEACHER *YESTERDAY                             ALL BOY GIVE TEACHER APPLE\n",
+      "  189: *MARY *GO *YESTERDAY BOX                                      JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *GO *YESTERDAY BOX                                       JOHN GIVE GIRL BOX\n",
+      "  199: *HOMEWORK *STUDENT *GO                                        LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *MAN *LOVE *JOHN BUY HOUSE                               JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Choose a feature set and model selector\n",
-    "# TODO Recognize the test set and display the result with the show_errors method"
+    "features = features_polar \n",
+    "model_selector = SelectorCV\n",
+    "# TODO Recognize the test set and display the result with the show_errors method\n",
+    "models = train_all_words(features, model_selector)\n",
+    "test_set = asl.build_test(features)\n",
+    "probabilities, guesses = recognize(models, test_set)\n",
+    "show_errors(guesses, test_set)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "**** WER = 0.5337078651685393\n",
+      "Total correct: 83 out of 178\n",
+      "Video  Recognized                                                    Correct\n",
+      "=====================================================================================================\n",
+      "    2: JOHN *NEW HOMEWORK                                            JOHN WRITE HOMEWORK\n",
+      "    7: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
+      "   12: JOHN *WHAT *JOHN CAN                                          JOHN CAN GO CAN\n",
+      "   21: JOHN *HOMEWORK *JOHN *PREFER *CAR *WHAT *FUTURE *WHO          JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   25: JOHN *IX IX *WHO IX                                           JOHN LIKE IX IX IX\n",
+      "   28: JOHN *FUTURE IX *FUTURE *LOVE                                 JOHN LIKE IX IX IX\n",
+      "   30: JOHN LIKE *MARY *MARY *MARY                                   JOHN LIKE IX IX IX\n",
+      "   36: *IX *EAT *GIVE *GIVE *MARY *MARY                              MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   40: JOHN *GO *GIVE *JOHN *MARY                                    JOHN IX THINK MARY LOVE\n",
+      "   43: JOHN *IX BUY HOUSE                                            JOHN MUST BUY HOUSE\n",
+      "   50: *JOHN *SEE BUY CAR *JOHN                                      FUTURE JOHN BUY CAR SHOULD\n",
+      "   54: JOHN SHOULD NOT BUY HOUSE                                     JOHN SHOULD NOT BUY HOUSE\n",
+      "   57: *MARY *GO *GO MARY                                            JOHN DECIDE VISIT MARY\n",
+      "   67: *SHOULD FUTURE *MARY BUY HOUSE                                JOHN FUTURE NOT BUY HOUSE\n",
+      "   71: JOHN *FUTURE *GIVE1 MARY                                      JOHN WILL VISIT MARY\n",
+      "   74: *IX *GO *GO *VISIT                                            JOHN NOT VISIT MARY\n",
+      "   77: *JOHN *GIVE1 MARY                                             ANN BLAME MARY\n",
+      "   84: *HOMEWORK *GIVE1 *HOMEWORK *COAT                              IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *GIVE *GIVE *IX *IX IX *ARRIVE *BOOK                          JOHN IX GIVE MAN IX NEW COAT\n",
+      "   90: JOHN GIVE IX SOMETHING-ONE WOMAN *ARRIVE                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *IX IX *IX *IX BOOK                                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "  100: POSS NEW CAR BREAK-DOWN                                       POSS NEW CAR BREAK-DOWN\n",
+      "  105: JOHN *SEE                                                     JOHN LEG\n",
+      "  107: JOHN POSS *HAVE HAVE *MARY                                    JOHN POSS FRIEND HAVE CANDY\n",
+      "  108: *LOVE *HOMEWORK                                               WOMAN ARRIVE\n",
+      "  113: IX CAR *IX *MARY *JOHN                                        IX CAR BLUE SUE BUY\n",
+      "  119: *MARY *BUY1 IX *BLAME *IX                                     SUE BUY IX CAR BLUE\n",
+      "  122: JOHN *GIVE1 BOOK                                              JOHN READ BOOK\n",
+      "  139: JOHN *ARRIVE WHAT *MARY *ARRIVE                               JOHN BUY WHAT YESTERDAY BOOK\n",
+      "  142: JOHN BUY YESTERDAY WHAT BOOK                                  JOHN BUY YESTERDAY WHAT BOOK\n",
+      "  158: LOVE JOHN WHO                                                 LOVE JOHN WHO\n",
+      "  167: JOHN *MARY *VISIT LOVE MARY                                   JOHN IX SAY LOVE MARY\n",
+      "  171: *IX MARY BLAME                                                JOHN MARY BLAME\n",
+      "  174: *JOHN GROUP GIVE1 *YESTERDAY *JOHN                            PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  181: *EAT ARRIVE                                                   JOHN ARRIVE\n",
+      "  184: ALL BOY *GIVE1 TEACHER *YESTERDAY                             ALL BOY GIVE TEACHER APPLE\n",
+      "  189: *MARY *GO *YESTERDAY BOX                                      JOHN GIVE GIRL BOX\n",
+      "  193: JOHN *GO *YESTERDAY BOX                                       JOHN GIVE GIRL BOX\n",
+      "  199: *HOMEWORK *STUDENT *GO                                        LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *GIVE *LOVE *JOHN BUY HOUSE                              JOHN TELL MARY IX-1P BUY HOUSE\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO Choose a feature set and model selector\n",
-    "# TODO Recognize the test set and display the result with the show_errors method"
+    "features = features_polar \n",
+    "model_selector = SelectorDIC\n",
+    "# TODO Recognize the test set and display the result with the show_errors method\n",
+    "models = train_all_words(features, model_selector)\n",
+    "test_set = asl.build_test(features)\n",
+    "probabilities, guesses = recognize(models, test_set)\n",
+    "show_errors(guesses, test_set)"
    ]
   },
   {
@@ -2127,7 +2312,20 @@
    "source": [
     "**Question 3:**  Summarize the error results from three combinations of features and model selectors.  What was the \"best\" combination and why?  What additional information might we use to improve our WER?  For more insight on improving WER, take a look at the introduction to Part 4.\n",
     "\n",
-    "**Answer 3:**"
+    "**Answer 3:**\n",
+    "\n",
+    "There WER for each combination is summarized in the table below. \n",
+    "\n",
+    "|   <b>Selector</b> <td colspan=4><center><b>Features </b></center>|\n",
+    "|----------|----------|------------|--------|--------|\n",
+    "|| Grounded | Normalized | Polar  | Delta  |\n",
+    "| CV       | 0.5674   | 0.6067     | 0.5281 | 0.6123 |\n",
+    "| BIC      | 0.6629   | 0.6685     | 0.6348 | 0.6292 |\n",
+    "| DIC      | 0.5843   | 0.6067     | 0.5337 | 0.6123 |\n",
+    "\n",
+    "The \"best\" combination is a model using polar coordinate features and cross-validation for model selection. This is probably due to 1) polar coordinate is a better description of the hand's gesture due to its nature, and 2) cross-validation efficiently uses training data to evaluate model performance on unseen data to mitigate overfitting. \n",
+    "\n",
+    "To improve WER we can use statistical language models - applying n-gram might help to make more accurately predict ions. Also, additional freature engineering might be helpful."
    ]
   },
   {
@@ -2144,13 +2342,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "..\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 2 tests in 50.743s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from asl_test_recognizer import TestRecognize\n",
     "suite = unittest.TestLoader().loadTestsFromModule(TestRecognize())\n",
