modified selector for DIC

--- a/asl_recognizer.ipynb
+++ b/asl_recognizer.ipynb
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1851,7 +1851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1862,11 +1862,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training complete for FISH with 3 states with time 0.1902404730208218 seconds\n",
-      "Training complete for BOOK with 15 states with time 4.064338588970713 seconds\n",
-      "Training complete for VEGETABLE with 15 states with time 1.4158778869896196 seconds\n",
-      "Training complete for FUTURE with 15 states with time 4.126042880991008 seconds\n",
-      "Training complete for JOHN with 15 states with time 40.159374848008156 seconds\n"
+      "Training complete for FISH with 3 states with time 1.471891792025417 seconds\n",
+      "Training complete for BOOK with 15 states with time 8.967844097001944 seconds\n",
+      "Training complete for VEGETABLE with 15 states with time 5.715220013982616 seconds\n",
+      "Training complete for FUTURE with 15 states with time 8.71955939399777 seconds\n",
+      "Training complete for JOHN with 15 states with time 40.3506066169939 seconds\n"
      ]
     }
    ],
@@ -1915,7 +1915,7 @@
     "- Advantages:\n",
     "It gives better performance than BIC (according to the reference) as DIC scores the discriminant ability of a training set for one word against competing words.\n",
     "- Disadvantages:\n",
-    "Since model complexity is not penalized, DIC usually give more complex model than BIC."
+    "It is also computationally expensive. Also, since model complexity is not penalized, DIC usually give more complex model than BIC."
    ]
   },
   {
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1945,7 +1945,7 @@
      "text": [
       "....\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 64.228s\n",
+      "Ran 4 tests in 58.901s\n",
       "\n",
       "OK\n"
      ]
@@ -1956,7 +1956,7 @@
        "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2035,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2245,18 +2245,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "**** WER = 0.5337078651685393\n",
-      "Total correct: 83 out of 178\n",
+      "**** WER = 0.5449438202247191\n",
+      "Total correct: 81 out of 178\n",
       "Video  Recognized                                                    Correct\n",
       "=====================================================================================================\n",
-      "    2: JOHN *NEW HOMEWORK                                            JOHN WRITE HOMEWORK\n",
+      "    2: JOHN *NEW *GIVE1                                              JOHN WRITE HOMEWORK\n",
       "    7: JOHN CAN GO CAN                                               JOHN CAN GO CAN\n",
       "   12: JOHN *WHAT *JOHN CAN                                          JOHN CAN GO CAN\n",
-      "   21: JOHN *HOMEWORK *JOHN *PREFER *CAR *WHAT *FUTURE *WHO          JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
+      "   21: JOHN *NEW *JOHN *PREFER *GIVE1 *WHAT *FUTURE *WHO             JOHN FISH WONT EAT BUT CAN EAT CHICKEN\n",
       "   25: JOHN *IX IX *WHO IX                                           JOHN LIKE IX IX IX\n",
       "   28: JOHN *FUTURE IX *FUTURE *LOVE                                 JOHN LIKE IX IX IX\n",
       "   30: JOHN LIKE *MARY *MARY *MARY                                   JOHN LIKE IX IX IX\n",
-      "   36: *IX *EAT *GIVE *GIVE *MARY *MARY                              MARY VEGETABLE KNOW IX LIKE CORN1\n",
+      "   36: *IX *VISIT *GIVE *GIVE *MARY *MARY                            MARY VEGETABLE KNOW IX LIKE CORN1\n",
       "   40: JOHN *GO *GIVE *JOHN *MARY                                    JOHN IX THINK MARY LOVE\n",
       "   43: JOHN *IX BUY HOUSE                                            JOHN MUST BUY HOUSE\n",
       "   50: *JOHN *SEE BUY CAR *JOHN                                      FUTURE JOHN BUY CAR SHOULD\n",
@@ -2266,14 +2266,14 @@
       "   71: JOHN *FUTURE *GIVE1 MARY                                      JOHN WILL VISIT MARY\n",
       "   74: *IX *GO *GO *VISIT                                            JOHN NOT VISIT MARY\n",
       "   77: *JOHN *GIVE1 MARY                                             ANN BLAME MARY\n",
-      "   84: *HOMEWORK *GIVE1 *HOMEWORK *COAT                              IX-1P FIND SOMETHING-ONE BOOK\n",
-      "   89: *GIVE *GIVE *IX *IX IX *ARRIVE *BOOK                          JOHN IX GIVE MAN IX NEW COAT\n",
+      "   84: *HOMEWORK *GIVE1 *GIVE1 *COAT                                 IX-1P FIND SOMETHING-ONE BOOK\n",
+      "   89: *GIVE *GIVE *WOMAN *WOMAN IX *ARRIVE *BOOK                    JOHN IX GIVE MAN IX NEW COAT\n",
       "   90: JOHN GIVE IX SOMETHING-ONE WOMAN *ARRIVE                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
-      "   92: JOHN *IX IX *IX *IX BOOK                                      JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
+      "   92: JOHN *WOMAN IX *WOMAN WOMAN BOOK                              JOHN GIVE IX SOMETHING-ONE WOMAN BOOK\n",
       "  100: POSS NEW CAR BREAK-DOWN                                       POSS NEW CAR BREAK-DOWN\n",
       "  105: JOHN *SEE                                                     JOHN LEG\n",
       "  107: JOHN POSS *HAVE HAVE *MARY                                    JOHN POSS FRIEND HAVE CANDY\n",
-      "  108: *LOVE *HOMEWORK                                               WOMAN ARRIVE\n",
+      "  108: *LOVE *LOVE                                                   WOMAN ARRIVE\n",
       "  113: IX CAR *IX *MARY *JOHN                                        IX CAR BLUE SUE BUY\n",
       "  119: *MARY *BUY1 IX *BLAME *IX                                     SUE BUY IX CAR BLUE\n",
       "  122: JOHN *GIVE1 BOOK                                              JOHN READ BOOK\n",
@@ -2282,13 +2282,13 @@
       "  158: LOVE JOHN WHO                                                 LOVE JOHN WHO\n",
       "  167: JOHN *MARY *VISIT LOVE MARY                                   JOHN IX SAY LOVE MARY\n",
       "  171: *IX MARY BLAME                                                JOHN MARY BLAME\n",
-      "  174: *JOHN GROUP GIVE1 *YESTERDAY *JOHN                            PEOPLE GROUP GIVE1 JANA TOY\n",
+      "  174: *JOHN *JOHN GIVE1 *YESTERDAY *JOHN                            PEOPLE GROUP GIVE1 JANA TOY\n",
       "  181: *EAT ARRIVE                                                   JOHN ARRIVE\n",
-      "  184: ALL BOY *GIVE1 TEACHER *YESTERDAY                             ALL BOY GIVE TEACHER APPLE\n",
+      "  184: *GO BOY *GIVE1 TEACHER *YESTERDAY                             ALL BOY GIVE TEACHER APPLE\n",
       "  189: *MARY *GO *YESTERDAY BOX                                      JOHN GIVE GIRL BOX\n",
       "  193: JOHN *GO *YESTERDAY BOX                                       JOHN GIVE GIRL BOX\n",
-      "  199: *HOMEWORK *STUDENT *GO                                        LIKE CHOCOLATE WHO\n",
-      "  201: JOHN *GIVE *LOVE *JOHN BUY HOUSE                              JOHN TELL MARY IX-1P BUY HOUSE\n"
+      "  199: *JOHN *STUDENT *GO                                            LIKE CHOCOLATE WHO\n",
+      "  201: JOHN *MAN *LOVE *JOHN BUY HOUSE                               JOHN TELL MARY IX-1P BUY HOUSE\n"
      ]
     }
    ],
@@ -2321,7 +2321,7 @@
     "|| Grounded | Normalized | Polar  | Delta  |\n",
     "| CV       | 0.5674   | 0.6067     | 0.5281 | 0.6123 |\n",
     "| BIC      | 0.6629   | 0.6685     | 0.6348 | 0.6292 |\n",
-    "| DIC      | 0.5843   | 0.6067     | 0.5337 | 0.6123 |\n",
+    "| DIC      | 0.5730   | 0.5955     | 0.5449 | 0.6292 |\n",
     "\n",
     "The \"best\" combination is a model using polar coordinate features and cross-validation for model selection. This is probably due to 1) polar coordinate is a better description of the hand's gesture due to its nature, and 2) cross-validation efficiently uses training data to evaluate model performance on unseen data to mitigate overfitting. \n",
     "\n",
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2355,7 +2355,7 @@
      "text": [
       "..\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 50.743s\n",
+      "Ran 2 tests in 47.924s\n",
       "\n",
       "OK\n"
      ]
@@ -2366,7 +2366,7 @@
        "<unittest.runner.TextTestResult run=2 errors=0 failures=0>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
